# a2a-scaffold

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
agent-config/skills/: example-skill.md
agent-config/skills/example-skill/: SKILL.md
configs/: config.yaml
docs/: skill-development-guide.md
examples/: a2a_client.py
frontend/: a2a-scaffold.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.scaffold.ts
frontend/src/: a2a-scaffold.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/markdown/: HighlightedCodeBlock.tsx  RenderableCodeBlock.tsx  index.ts
frontend/src/components/markdown/renderers/: MermaidRenderer.tsx  VegaLiteRenderer.tsx
frontend/src/components/opencode/: Markdown.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Icon.tsx  index.ts
frontend/src/lib/: agui-adapter.ts  image-utils.ts  useAgentStream.ts  utils.ts
frontend/src/styles/: index.css
frontend/src/styles/opencode/: basic-tool.css  collapsible.css  diff.css  index.css  permission.css  preview.css  question.css  session-turn.css
frontend/src/types/: index.ts
src/agentx/: agui_adapter.py  mcp_loader.py
src/agentx/server/: connect.py  main.py
src/agentx/services/: a2a_service.py
src/agentx/skills/: __init__.py
src/agentx/tools/: connector_tool.py  copilot_demo_tools.py  doc_tool.py  kb_tool.py  mcp_loader.py  skill_loader.py  todo_tool.py
