[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-scaffold"
version = "0.1.0"
description = "A2A Scaffold — Standalone A2A agent server"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-reflection>=1.68.0",
    "grpcio-health-checking>=1.68.0",
    "protobuf>=6.33.5,<7.0.0",
    "googleapis-common-protos>=1.65.0",
    "connect-python>=0.8.1",
    "hypercorn>=0.17.0",
    "uvloop>=0.21.0",
    "anyio>=4.7.0",
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "httpx[http2]>=0.28.0",
    "uvicorn>=0.34.0",
    "strands-agents>=1.29.0",
    "strands-agents-tools>=0.2.22",
    "ag-ui-protocol>=0.1.10",
]

[project.scripts]
agentx-server = "agentx.server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]
